integration_tests/codegen_fail/fail/object/derive_no_underscore.rs
#[derive(juniper::GraphQLObject)]
struct Object {
    #[graphql(name = "__test")]
    test: String,
}

fn main() {}
